--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -1,13 +1,22 @@
 <resources>
     <string name="app_name">Stockers</string>
+
+    <!--Strings For Loan Calculator Activity-->
     <string name="amount">Amount:</string>
-    <string name="interestRate">Interest Rate:</string>
+    <string name="interestRate">Interest Rate (%):</string>
     <string name="minPayment">Minimum Payment:</string>
     <string name="years">Years:</string>
 
-    <integer-array name="yearOptions">
+    <!--Strings For Loan Calculator Results Table-->
+    <string name="timeToPay">Time to pay off:</string>
+    <string name="ogBalance">Original Balance:</string>
+    <string name="interestAccumulated">Interest Accumulated:</string>
+    <string name="totalPaid">Total Amount Paid:</string>
+    <string name="amountLeft">Balance Left:</string>
+
+    <string-array name="yearOptions">
         <item>1</item>
         <item>5</item>
         <item>10</item>
-    </integer-array>
+    </string-array>
 </resources>
