first draft of settings layout in option menu

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -1,26 +1,55 @@
 <resources>
     <string name="app_name">FEAM2PM</string>
-    <string name="desc">This app is intended to be an educational tool for learning a bit about finances (loans, currency exchange, stocks.)  The purpose of this project is to create an application
-        that will exercise what our team (see below) have learned about the Android framework and Mobile software development</string>
-    <string name="team">Lara M, Nicholas A, John P, Danny M</string>
+    <!-- IMPLICIT INTENT TO DAWSON WEBSITE -->
     <string name="urlToDawson">https://www.dawsoncollege.qc.ca</string>
+    <!-- ABOUT ACTIVITY STRINGS -->
     <string name="desc_title">About the app</string>
+    <string name="desc">This app is intended to be an educational tool for learning a bit about finances (loans, currency exchange, stocks.)  The purpose of this project is to create an applicationthat will exercise what our team (see below) have learned about the Android framework and Mobile software development</string>
     <string name="names_title">Meet our awesome developers</string>
+    <string name="team">Lara M, Nicholas A, John P, Danny M</string>
     <string name="why_title">Purpose of the app</string>
-    <string name="dialog_title">More about us</string>
-    <string name="john"><b>John Pesce</b></string>
-    <string name="about_john_short">19 years old, loves math and algorithms, can solve any problem</string>
+    <string name="why">Final project for the Android Course(420-517-DW) with Patricia Campbell, Dawson College</string>
     <string name="git_john">Get to know John Pesce more at @johnPesce on gitlab</string>
     <string name="git_lara">Get to know Lara Mezirovsky more at @Mosh_La on gitlab</string>
     <string name="git_nick">Get to know Nick more at @Apanian25 on gitlab</string>
     <string name="git_danny">Get to know Danny more at @danny on gitlab</string>
+    <string name="john"><b>John Pesce</b></string>
+    <string name="about_john_short">19 years old, loves math and algorithms, can solve any problem</string>
     <string name="nick"><b>Nicholas Apanian</b></string>
     <string name="about_nick_short">20 years old, codes with in a fast an efficient manner in multiple languages</string>
     <string name="lara"><b>Lara Mezirovsky</b></string>
     <string name="about_lara_short">19 years old, loves design and creating websites/apps on any platform</string>
     <string name="danny"><b>Danny Manzano</b></string>
     <string name="about_danny_short">21 years old, great with logic and data structures</string>
-    <string name="why">Final project for the Android Course(420-517-DW) with Patricia Campbell, Dawson College</string>
+    <!--DIALOGS IN ABOUT ACTIVITY-->
+    <string name="about_dialog_title">More about us</string>
     <string name="btn_text">OK</string>
+    <!-- SETTING ACTIVITY STRINGS -->
+    <string name="settings_title">Settings</string>
+    <string name="fname"><b>First Name</b></string>
+    <string name="lname"><b>Last Name</b></string>
+    <string name="email"><b>Email</b></string>
+    <string name="password"><b>Password</b></string>
+    <string name="pref_curr"><b>Preferred Currency</b></string>
+    <string name="pref_stock"><b>Preferred Stock Exchange</b></string>
+    <string name="date">Last Updated: 29/11/2018</string>
+    <string-array name="spinner_values_currency">
+        <item>CAD</item>
+        <item>USD</item>
+        <item>BTC</item>
+    </string-array>
 
+    <string-array name="spinner_values_stock">
+     <item>TSX</item>
+     <item>NYSE</item>
+     <item>NASDAQ</item>
+    </string-array>
+    <string name="chose_curr">Chose currency</string>
+    <string name="chose_stock">Chose stock</string>
+    <string name="btn_text_settings">Save</string>
+
+    <!--DIALOGS IN SETTINGS ACTIVITY-->
+    <string name="setting_dialog_title">Save your changes</string>
+    <string name="setting_dialog_message">Are you sure you want to quit wihtout saving?</string>
+    <string name="btn_text_settings_cancle">Cancle</string>
 </resources>
