--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="title_activity_note">Note</string>
     <string name="hint_word">Enter Text here…</string>
     <string name="button_save">Save</string>
-    <string name="empty_not_saved">Note not saved because it is empty<empty></empty></string>
     <string name="title_activity_new_note">New Note</string>
     <string name="button_delete">Delete</string>
     <string name="item_deleted">The note has been deleted</string>
+    <string name="not_saved">Note not saved</string>
 </resources>
