--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="setting_dialog_title">Save your changes</string>
     <string name="setting_dialog_message">Are you sure you want to quit wihtout saving?</string>
     <string name="btn_text_settings_cancle">Cancle</string>
+    <string name="data_saved">Successfully modified your settings</string>
 </resources>
