--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -76,5 +76,5 @@
     <string name="ticker_input">Enter a ticker symbol of your choice:</string>
     <string name="stock_quotes_title">Stock Quotes</string>
     <string name="more_than_five">Can view maximum 5 stocks at a time</string>
-
+    <string name="empty_string">Ticker symbol does not consist of space only</string>
 </resources>
