--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -77,4 +77,8 @@
     <string name="stock_quotes_title">Stock Quotes</string>
     <string name="more_than_five">Can view maximum 5 stocks at a time</string>
     <string name="empty_string">Ticker symbol does not consist of space only</string>
+
+    <!--SHOW STOCK-->
+    <string name="no_internet">The following page requires network connection</string>
+    <string name="no_internet_message">The following page requires network connection</string>
 </resources>
