Add Spinner and populate it
Make the request to get all the currencies and their exchange rates, with hard coded base rate, and populate the Spinner with the values received from the Api

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Stockers</string>
+    <string name="calculate">Calculate</string>
+    <string name="amount_hint">1000</string>
 </resources>
