add functionality to stockQuote: gets values from the api - todo: validation

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -81,4 +81,6 @@
     <!--SHOW STOCK-->
     <string name="no_internet">The following page requires network connection</string>
     <string name="no_internet_message">The following page requires network connection</string>
+    <string name="error_server">503 Service Unavailable</string>
+    <string name="wrong_url">Something went wrong went wrong, please try again!</string>
 </resources>
