--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Stockers</string>
+    <string name="newsTitle">News Articles</string>
+    <string name="subSuccess">You are successfully subscribed to the news articles!!!</string>
+    <string name="subFailed">Something went wrong, try again later to sub</string>
 </resources>
