--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="not_saved">Note not saved</string>
     <string name="newsTitle">News Articles</string>
     <string name="subSuccess">You are successfully subscribed to the news articles!!!</string>
-    <string name="subFailed">Something went wrong, try again later to sub</string>
+    <string name="subFailed">Something went wrong, try again later</string>
+    <string name="unSubSuccess">You are unsubscribed from the best news outlet</string>
 </resources>
