--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
+
+    <!--Manifest-->
+    <string name="app_name">Stockers</string>
+
+
+    <!--Action Bar-->
+    <string name="app_name_team">FEAM2PM</string>
+
+
     <!-- IMPLICIT INTENT TO DAWSON WEBSITE -->
     <string name="urlToDawson">https://www.dawsoncollege.qc.ca</string>
+
+
     <!-- ABOUT ACTIVITY STRINGS -->
     <string name="desc_title">About the app</string>
     <string name="desc">This app is intended to be an educational tool for learning a bit about finances (loans, currency exchange and stocks)  The purpose of this project is to create an application that will exercise what our team (see below) have learned about the Android framework and Mobile software development</string>
@@ -20,9 +31,13 @@
     <string name="about_lara_short">19 years old, loves design and creating websites/apps on any platform</string>
     <string name="danny"><b>Danny Manzano</b></string>
     <string name="about_danny_short">21 years old, great with logic and data structures</string>
+
+
     <!--DIALOGS IN ABOUT ACTIVITY-->
     <string name="about_dialog_title">More about us</string>
     <string name="btn_text">OK</string>
+
+
     <!-- SETTING ACTIVITY STRINGS -->
     <string name="settings_title">Settings</string>
     <string name="fname"><b>First Name:</b></string>
@@ -37,7 +52,6 @@
         <item>USD</item>
         <item>BTC</item>
     </string-array>
-
     <string-array name="spinner_values_stock">
         <item>TSX</item>
         <item>NYSE</item>
@@ -54,12 +68,12 @@
     <string name="chose_stock">Chose stock</string>
     <string name="btn_text_settings">Save</string>
 
+
     <!--DIALOGS IN SETTINGS ACTIVITY-->
     <string name="setting_dialog_title">Save your changes</string>
     <string name="setting_dialog_message">Are you sure you want to quit wihtout saving?</string>
     <string name="btn_text_settings_cancle">Cancle</string>
     <string name="data_saved">Successfully modified your settings</string>
-    <string name="app_name">Stockers</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="learn_more">Learn More</string>
@@ -71,6 +85,7 @@
     <string name="item_deleted">The note has been deleted</string>
     <string name="not_saved">Note not saved</string>
     <string name="title_activity_stock_quotes">StockQuotesActivity</string>
+
 
     <!--STOCK QUOTE-->
     <string name="ticker_input">Enter a ticker symbol of your choice:</string>
