Changed gitlab username

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="git_john">Get to know John Pesce more at @johnPesce on gitlab</string>
     <string name="git_lara">Get to know Lara Mezirovsky more at @Mosh_La on gitlab</string>
     <string name="git_nick">Get to know Nick more at @Apanian25 on gitlab</string>
-    <string name="git_danny">Get to know Danny more at @danny on gitlab</string>
+    <string name="git_danny">Get to know Danny more at @1532483 on gitlab</string>
     <string name="john"><b>John Pesce</b></string>
     <string name="about_john_short">19 years old, loves math and algorithms, can solve any problem</string>
     <string name="nick"><b>Nicholas Apanian</b></string>
