--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="setting_dialog_message">Are you sure you want to quit without saving?</string>
     <string name="btn_text_settings_cancel">Cancel</string>
     <string name="data_saved">Successfully modified your settings</string>
+    <string name="data_empty">You need to fill the settings input</string>
     <string name="calculate">Calculate</string>
     <string name="amount_hint">1000</string>
 
