Add the view holder for the User Stock Recycler View

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <string name="interestAccumulated">Interest Accumulated:</string>
     <string name="totalPaid">Total Amount Paid:</string>
     <string name="amountLeft">Balance Left:</string>
+    <string name="subject">Credit Loan Calculation Results</string>
 
     <string-array name="yearOptions">
         <item>1</item>
