--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -144,4 +144,8 @@
     <string name="portfolio">Your Portfolio</string>
     <string name="welcome">Welcome, </string>
 
+    <!--API-->
+    <string name="purchasePrice">Purchase Price: </string>
+    <string name="quantity">Quantity: </string>
+
 </resources>
