Add styling for the recycler view Still need to style the rest of the activity

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -147,5 +147,6 @@
     <!--API-->
     <string name="purchasePrice">Purchase Price: </string>
     <string name="quantity">Quantity: </string>
+    <string name="cash">Cash: </string>
 
 </resources>
