--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -147,6 +147,6 @@
     <!--API-->
     <string name="purchasePrice">Purchase Price: </string>
     <string name="quantity">Quantity: </string>
-    <string name="cash">Cash: </string>
+    <string name="balance">Balance: </string>
 
 </resources>
