--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="subSuccess">You are successfully subscribed to the news articles!!!</string>
     <string name="subFailed">Something went wrong, try again later</string>
     <string name="unSubSuccess">You are unsubscribed from the best news outlet</string>
+    <string name="currentBalance">Current Balance: </string>
 
     <!--Main Layout-->
     <string name="foreignEx">Foreign Exchange</string>
