--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="subFailed">Something went wrong, try again later</string>
     <string name="unSubSuccess">You are unsubscribed from the best news outlet</string>
     <string name="currentBalance">Current Balance: </string>
+    <string name="wrong_credential">There was an issue logging into your account, please verify your credentials</string>
 
     <!--Main Layout-->
     <string name="foreignEx">Foreign Exchange</string>
