Modularize the code for phase2: add buying fucntionality and calculate the max one can buy. worked with @Apanian25, and @John

--- a/Stockers/app/src/main/res/values/strings.xml
+++ b/Stockers/app/src/main/res/values/strings.xml
@@ -151,8 +151,8 @@
 
     <!--API-->
     <string name="purchasePrice">Purchase Price: </string>
-    <string name="quantity">Quantity: </string>
     <string name="balance">Balance: </string>
     <string name="errorJson">Opps, something went wrong, we were unable to load your stocks</string>
+    <string name="maximum">Max Amount:</string>
 
 </resources>
